Fixed alignment for footers.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -774,7 +774,7 @@
     padding-left: 5px;
   }
   
-  .card-body {
+  .card-body-custom {
     text-align: left;
   }
   
